--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <meta content="Fanic" property="og:site_name">
     <meta content="Fanic" property="og:title">
     <meta content="List your favorite playlist of your star. Do Fanic!" property="og:description">
-    <meta content="https://onlymytho.github.me/fanic" property="og:url">
+    <meta content="https://onlymytho.github.io/fanic" property="og:url">
     <meta content="website" property="og:type">
-    <meta content="https://onlymytho.github.me/fanic/assets/og.png" property="og:image">
+    <meta content="https://onlymytho.github.io/fanic/assets/og.png" property="og:image">
     <!-- Twitter -->
     <!-- <meta content="photo" name="twitter:card"> -->
     <meta content="Fanic" name="twitter:title">
