Insert playsinline logic to Youtube

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
           height: '1',
           width: '1',
           playerVars: {
-            'loop' : 1
+            'loop' : 1,
+            'playsinline' : 1
           },
           events: {
             // call this function when player is ready to use
