--- a/index.html
+++ b/index.html
@@ -94,6 +94,16 @@
       var firstScriptTag = document.getElementsByTagName('script')[0];
       firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
 
+      document.body.onkeyup = function(e){
+          if(e.keyCode == 32){
+            if (global_playerStatus == 1) {
+              player.pauseVideo()
+            }
+            else {
+              player.playVideo();
+            }
+          }
+      }
       var player;
 
       function onYouTubeIframeAPIReady() {
