--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
     <meta content="English" name="language">
     <meta name="Access-Control-Allow-Origin" content="*">
 
+    <!-- GA -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-63621212-3', 'auto');
+      ga('send', 'pageview');
+
+    </script>
     <!-- Facebook -->
     <meta content="Fanic" property="og:site_name">
     <meta content="Fanic" property="og:title">
@@ -65,6 +76,8 @@
             if (source == 'checkbox') {
               document.getElementById('video').classList.toggle('on');
               document.getElementsByClassName('equalizer')[0].classList.toggle('video_on');
+              var checkbox_status = document.querySelector('.content input[type=checkbox]').checked;
+              ga('send', 'event', 'Checkbox', 'Checkbox '+ checkbox_status);
             }
             else {
                 document.getElementById('video').classList.add('on');
@@ -157,6 +170,7 @@
         } else if (playerStatus == 1) { // playing
           showPlayState();
           video_on('others');
+          ga('send', 'event', 'Play', 'Play music ' + player.getPlaylistIndex());
           document.querySelector('.content input[type=checkbox]').checked = true;
         } else if (playerStatus == 2) { // paused
           showStopState()
@@ -164,9 +178,6 @@
           play_button_role.style.filter = 'brightness(140%) contrast(80%)';
         } else if (playerStatus == 5) { // video cued
         }
-      }
-      function show_music_title() {
-        document.getElementsByClassName('music_title')[0].innerText = player.getVideoData().title;
       }
       function autoplay_except_for_mobile() {
         var isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
@@ -190,9 +201,11 @@
         play_button_role.addEventListener("click", function() {
             if (global_playerStatus == 1) {
               player.pauseVideo()
+              ga('send', 'event', 'Pause', 'Pause music ' + player.getPlaylistIndex(), 'user_action');
             }
             else {
               player.playVideo();
+              ga('send', 'event', 'Play', 'Play music ' + player.getPlaylistIndex(), 'user_action');
             }
           }
         )
